exAuth/k8s/nginx-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-backend
  namespace: test-vish
  labels:
    app: nginx-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-backend
  template:
    metadata:
      labels:
        app: nginx-backend
    spec:
      containers:
      - name: nginx
        image: ghcr.io/vishalk17/nginx-backend:1.4
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
  namespace: test-vish
  labels:
    app: nginx-backend
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: nginx-backend
  type: ClusterIP
